chore: fix shadow getting cut off inside cashier content

--- a/packages/wallets/src/features/cashier/WalletCashier.scss
+++ b/packages/wallets/src/features/cashier/WalletCashier.scss
@@ -23,6 +23,7 @@
     @include tablet-screen {
         width: 60rem;
         margin-inline: auto;
+        overflow: visible;
     }
 
     @include mobile-or-tablet-screen {
